--- a/.github/workflows/pylint2.yml
+++ b/.github/workflows/pylint2.yml
@@ -1,9 +1,7 @@
 name: Pylint
 
-on: 
-  push:
-    branches:
-      - 'feature/tools_pep_compliance'
+on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
