--- a/.github/workflows/pylint2.yml
+++ b/.github/workflows/pylint2.yml
@@ -18,6 +18,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install croniter
+        pip install astropy
+        pip install bs4
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
