--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,26 +1,33 @@
 name: Pylint
 
-on: 
-  push: 
-    branches: 
-      - 'feature/tools_pep_compliance'
+on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: centos:7
     strategy:
       matrix:
-        python-version: ["3.5"]
+        python-version: ["3.8"]
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: set pythonpath
+      run: |
+            echo "PYTHONPATH=mlprepare" >> $GITHUB_ENV
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install netcdf4
+        conda install numpy
+        pip install astropy
+        pip install bs4
+        pip install croniter
         pip install pylint
+        conda install -c anaconda pyyaml
+        conda install -c anaconda boto3
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
