--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Build and install Python dependencies
       run: |
         wget --no-check-certificate https://repo.anaconda.com/miniconda/Miniconda3-py39_4.10.3-Linux-x86_64.sh
-        sh Miniconda3-py39_4.10.3-Linux-x86_64.sh -b -p /miniconda
+        sh Miniconda3-py39_4.10.3-Linux-x86_64.sh -b -p miniconda
         python -m pip install --upgrade pip
         pip install netcdf4
         conda install numpy
