--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -36,9 +36,10 @@ jobs:
     - name: Run ioapps unit-tests
       run: |
         export PYTHONPATH="$GITHUB_WORKSPACE/ufs_pyutils/ufs_pyutils"
-        ls $GITHUB_WORKSPACE/ufs_pyutils
-        cd $GITHUB_WORKSPACE/ufs_pyutils/ufs_pyutils/ioapps
-        ls 
+        ls $GITHUB_WORKSPACE/
+        
+        #cd $GITHUB_WORKSPACE/ufs_pyutils/ufs_pyutils/ioapps
+        #ls 
         #pytest 
            
 #    - name: Run tools unit-tests
