--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -28,10 +28,10 @@ jobs:
         conda install -c anaconda pyyaml
         conda install -c anaconda boto3
 
-    - name: Clone ufs_pyutils
-      run: |
-        cd $GITHUB_WORKSPACE
-        git clone git@github.com:HenryWinterbottom-NOAA/ufs_pyutils.git
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        path: ufs_pyutils
 
     - name: Run ioapps unit-tests
       run: |
