--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -36,7 +36,8 @@ jobs:
     - name: Run ioapps unit-tests
       run: |
         export PYTHONPATH="$GITHUB_WORKSPACE/ufs_pyutils/ufs_pyutils"
-        ls $GITHUB_WORKSPACE/
+        cd $GITHUB_WORKSPACE/ufs_pyutils
+        ls
         
         #cd $GITHUB_WORKSPACE/ufs_pyutils/ufs_pyutils/ioapps
         #ls 
