--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         export PYTHONPATH="$GITHUB_WORKSPACE/ufs_pyutils"
         cd $GITHUB_WORKSPACE/ufs_pyutils/ioapps
-        pwd
+        pytest
         
         #cd $GITHUB_WORKSPACE/ufs_pyutils/ufs_pyutils/ioapps
         #ls 
