--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -25,6 +25,7 @@ jobs:
         pip install croniter
         pip install pylint
         pip install pytest==7.2.0
+        pip install pytest-ordering
         conda install -c anaconda pyyaml
         conda install -c anaconda boto3
 
