--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,6 +26,7 @@ jobs:
         pip install pylint
         pip install pytest==7.2.0
         pip install pytest-ordering
+        pip install pytest-order
         conda install -c anaconda pyyaml
         conda install -c anaconda boto3
 
