--- a/.github/workflows/unittests.yaml
+++ b/.github/workflows/unittests.yaml
@@ -70,7 +70,7 @@ jobs:
         sh Miniconda3-py39_4.10.3-Linux-x86_64.sh -b -p miniconda
         python -m pip install --upgrade pip
         pip install netcdf4
-        conda install numpy
+        pip install numpy==1.22.4
         pip install astropy
         pip install bs4
         pip install croniter
