--- a/.github/workflows/pycodestyle.yaml
+++ b/.github/workflows/pycodestyle.yaml
@@ -81,6 +81,12 @@ jobs:
     - name: Run pycodestyle application.
       run: |
         cd $GITHUB_WORKSPACE/ufs_pyutils
-        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle .
+        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle confs
+        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle ioapps
+        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle launch
+        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle scripts
+        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle tools
+        pycodestyle -v --config $GITHUB_WORKSPACE/ufs_pyutils/.pycodestyle utils
+        
      
 
