--- a/execute/tests/test_files/test.hello_world.yaml
+++ b/execute/tests/test_files/test.hello_world.yaml
@@ -4,6 +4,7 @@ hello_world_sfd:
      update_owner: True
      docker_tag: latest
      docker_image: docker://noaaufsrnr/hello_world
+     create_sandbox: False
 
 hello_world_run:
 
