--- a/execute/tests/test_files/test.hello_world.yaml
+++ b/execute/tests/test_files/test.hello_world.yaml
@@ -5,6 +5,7 @@ hello_world_sfd:
      docker_tag: latest
      docker_image: docker://noaaufsrnr/hello_world
      build_sandbox: True
+     sandbox_name: ./tests/hello_world_sandbox
 
 hello_world_run:
 
