--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -10,7 +10,7 @@ jobs:
 
   # Define the container image.
   build:
-    runs-on: centOS 7
+    runs-on: centos latest
     name: Run the ufs_pyutils container build tests.
         
     steps:
