--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -19,13 +19,13 @@ jobs:
     # well as the Singularity build.
     - name: Build and install the Linux dependencies
       run: |
-           apt-get remove docker docker-engine docker.io containerd runc
-           apt-get update
-           apt-get install ca-certificates curl gnupg lsb-release
-           mkdir -p /etc/apt/keyrings
-           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-           echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-           chmod a+r /etc/apt/keyrings/docker.gpg
-           apt-get update
-           apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+           sudo apt-get remove docker docker-engine docker.io containerd runc
+           sudo apt-get update
+           sudo apt-get install ca-certificates curl gnupg lsb-release
+           sudo mkdir -p /etc/apt/keyrings
+           sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+           sudo echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+           sudo chmod a+r /etc/apt/keyrings/docker.gpg
+           sudo apt-get update
+           sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
            
