--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -15,9 +15,8 @@ jobs:
         
     steps:
 
-    # Build the Docker container containing both the Docker build as
-    # well as the Singularity build.
-    - name: Build and install the Linux dependencies
+    # Build and install the Docker dependencies
+    - name: Build and install the Docker dependencies
       run: |
            sudo apt-get remove docker docker-engine docker.io containerd runc
            sudo apt-get update
@@ -28,4 +27,10 @@ jobs:
            sudo chmod a+r /etc/apt/keyrings/docker.gpg
            sudo apt-get update
            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
-           
+
+     # Build and install the Singularity dependencies
+     - name: Build and install the Singularity dependencies
+       run: |
+            sudo apt-get update
+            sudo apt-get install build-essential
+            sudo apt-get install libstdc++6
