--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -18,6 +18,7 @@ jobs:
     # Build and install the Docker dependencies
     - name: Build and install the Docker dependencies
       run: |
+           sudo apt-get install git
            sudo apt-get remove docker docker-engine docker.io containerd runc
            sudo apt-get update
            sudo apt-get install ca-certificates curl gnupg lsb-release
@@ -34,3 +35,16 @@ jobs:
            sudo apt-get update
            sudo apt-get install build-essential
            sudo apt-get install libstdc++6
+           sudo export VERSION=1.19.3 OS=linux ARCH=386
+           sudo wget -O /tmp/go${VERSION}.${OS}-${ARCH}.tar.gz https://dl.google.com/go/go${VERSION}.${OS}-${ARCH}.tar.gz
+           sudo tar -C /usr/local -xzf /tmp/go${VERSION}.${OS}-${ARCH}.tar.gz
+           sudo echo 'export PATH=$PATH:/usr/local/go/bin' >> /root/.bashrc
+           sudo rm -rf /tmp/go${VERSION}.${OS}-${ARCH}.tar.gz
+           sudo git clone --recurse-submodules https://github.com/sylabs/singularity.git 
+           sudo cd singularity 
+           sudo source /root/.bashrc 
+           sudo ./mconfig --without-suid --without-conmon --without-seccomp 
+           sudo export LD_LIBRARY_PATH=/usr/lib64:${LD_LIBRARY_PATH} 
+           sudo make -C builddir 
+           sudo make -C builddir install
+           
