--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -32,19 +32,5 @@ jobs:
     # Build and install the Singularity dependencies
     - name: Build and install the Singularity dependencies
       run: |
-           sudo apt-get update
-           sudo apt install bash
-           sudo apt-get install build-essential
-           sudo apt-get install libstdc++6
-           sudo wget -O /tmp/go.tar.gz https://dl.google.com/go/go1.19.3.linux-386.tar.gz
-           sudo tar -C /usr/local -xzf /tmp/go.tar.gz
-           sudo echo "export PATH=/usr/local/go/bin" >> ~/.bashrc
-           sudo rm -rf /tmp/go.tar.gz
-           sudo git clone --recurse-submodules https://github.com/sylabs/singularity.git 
-           sudo -D singularity
-           bash -c "source ~/.bashrc"
-           sudo ./mconfig --without-suid --without-conmon --without-seccomp
-           bash -c "export LD_LIBRARY_PATH=/usr/lib64:${LD_LIBRARY_PATH}"
-           sudo make -C builddir
-           sudo make -C builddir install
+           sudo docker pull noaaufsrnr/el7-miniconda-ufs_pyutils.ufs_apps: latest
            
