--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -44,7 +44,7 @@ jobs:
     - name: Build the Docker image and push to the Docker Hub repository.
       run: |
            cd $GITHUB_WORKSPACE/ufs_pyutils/Docker
-           docker build -f ubuntu20.04-miniconda-ufs_pyutils.docker --tag ubuntu20.04-miniconda-ufs_pyutils:latest
+           docker build -f ubuntu20.04-miniconda-ufs_pyutils.docker --tag ubuntu20.04-miniconda-ufs_pyutils:latest .
            docker tag ubuntu20.04-miniconda-ufs_pyutils:latest noaaufsrnr/ubuntu20.04-miniconda-ufs_pyutils:latest
            docker push noaaufsrnr/ubuntu20.04-miniconda-ufs_pyutils:latest
 
