--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -40,10 +40,16 @@ jobs:
       with:
         path: ufs_pyutils
 
-    # Build the Docker image and push to the Docker Hub repository.
-    - name: Build the Docker image and push to the Docker Hub repository.
+    # Build the Docker image.
+    - name: Build the Docker image.
       run: |
            cd $GITHUB_WORKSPACE/ufs_pyutils/Docker
            docker build -f ubuntu20.04-miniconda-ufs_pyutils.docker --tag ubuntu20.04-miniconda-ufs_pyutils:latest .
+
+    # Build the Docker image.
+    - name: Build the Docker image.
+      run: |
+           cd $GITHUB_WORKSPACE/ufs_pyutils/Docker
+           singularity build $GITHUB_WORKSPACE/ufs_pyutils/Docker/ubuntu20.04-miniconda-ufs_pyutils.sif docker-daemon://ubuntu20.04-miniconda-ufs_pyutils:latest
 
            
