--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -4,8 +4,15 @@ name: Container Build Tests
 # Define the Github triggers for which to launch the respective Github
 # action/workflow.
 on: [workflow_dispatch]
+  pull_request:
+    types: [opened]
+    
+  release:
+    types: [published]
 
-          
+  schedule:
+    - cron: "0 0 * * *"
+
 jobs:
 
   # Define the container image.
@@ -45,5 +52,6 @@ jobs:
       run: |
            cd $GITHUB_WORKSPACE/ufs_pyutils/Docker
            docker build -f ubuntu20.04-miniconda-ufs_pyutils.docker --tag ubuntu20.04-miniconda-ufs_pyutils:latest .
+           docker build -f ubuntu20.04.hello_world.docker --tag ubuntu20.04.hello_world.docker:latest .
 
            
