--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -1,17 +1,57 @@
+# =========================================================================
+
+# YAML: .github/workflows/containers.yaml
+
+# Author: Henry R. Winterbottom
+
+# Email: henry.winterbottom@noaa.gov
+
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the respective public license published by the
+# Free Software Foundation and included with the repository within
+# which this application is contained.
+
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+# =========================================================================
+
+# Description
+# -----------
+
+#    This file contains a Github actions/workflow to build a Docker
+#    Engine environment, install the ufs_pyutils required packages,
+#    and build the respective Docker images. This workflow action is
+#    invoked when a Github pull request is opened, a release is
+#    published, and at 0000 UTC every day.
+
+# Author(s)
+# ---------
+
+#    Henry R. Winterbottom; 16 January 2023
+
+# History
+# -------
+
+#    2023-01-16: Henry Winterbottom -- Initial implementation.
+
+# ----
+
 # Define the name of the Github actions/workflow.
 name: Container Build Tests
 
 # Define the Github triggers for which to launch the respective Github
 # action/workflow.
-on: [workflow_dispatch]
-#  pull_request:
-#    types: [opened]
-#    
-#  release:
-#    types: [published]
+on: 
+  pull_request:
+    types: [opened]
+    
+  release:
+    types: [published]
 
-#  schedule:
-#    - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
 
