--- a/.github/workflows/buildtest.yaml
+++ b/.github/workflows/buildtest.yaml
@@ -80,4 +80,4 @@ jobs:
       run: |
            cd $GITHUB_WORKSPACE/ufs_pyutils/
            python setup.py build
-           python setup.py -e .
+           python setup.py install -e .
